suppression de guava pour réduire la taille du jar