@@ -4,17 +4,15 @@ import org.antlr.v4.runtime.CharStreams;
 import org.antlr.v4.runtime.CommonTokenStream;
 import org.antlr.v4.runtime.tree.ParseTree;
 import org.antlr.v4.runtime.tree.ParseTreeWalker;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.minitestlang.antlr.java.Java8Lexer;
-import org.minitestlang.antlr.java.Java8Parser;
 import org.minitestlang.antlr.minitestlang.MinitestlangLexer;
 import org.minitestlang.antlr.minitestlang.MinitestlangParser;
 import org.minitestlang.ast.ClassAST;
 import org.minitestlang.ast.MethodAST;
-import org.minitestlang.listener.java.UppercaseMethodListener;
+import org.minitestlang.utils.CollectionUtils;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 class MiniTestLangListenerTest {
 
@@ -22,17 +20,17 @@ class MiniTestLangListenerTest {
     void exitClassDef() {
         String javaClassContent = "class SampleClass { int DoSomething(){} }";
 
-        ClassAST classAST=parse(javaClassContent);
+        ClassAST classAST = parse(javaClassContent);
 
         assertNotNull(classAST);
-        assertEquals("SampleClass",classAST.getName());
-        assertEquals(1,classAST.getMethods().size());
-        MethodAST method=classAST.getMethods().get(0);
-        assertEquals("DoSomething",method.getName());
-        assertEquals(0,method.getInstructions().size());
+        assertEquals("SampleClass", classAST.getName());
+        assertEquals(1, classAST.getMethods().size());
+        MethodAST method = classAST.getMethods().getFirst();
+        assertEquals("DoSomething", method.getName());
+        assertEquals(0, CollectionUtils.size(method.getInstructions()));
     }
 
-    private ClassAST parse(String s){
+    private ClassAST parse(String s) {
         MinitestlangLexer minitestlangLexer = new MinitestlangLexer(CharStreams.fromString(s));
 
         CommonTokenStream tokens = new CommonTokenStream(minitestlangLexer);
@@ -40,7 +38,7 @@ class MiniTestLangListenerTest {
         ParseTree tree = parser.main();
 
         ParseTreeWalker walker = new ParseTreeWalker();
-        MiniTestLangListener listener= new MiniTestLangListener();
+        MiniTestLangListener listener = new MiniTestLangListener();
 
         walker.walk(listener, tree);
         return listener.getClassAST();
